--- a/CarnivorousPlants/CarnivorousPlants/Views/_ViewImports.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using CarnivorousPlants
+﻿@using Microsoft.AspNetCore.Identity
+@using CarnivorousPlants
 @using CarnivorousPlants.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper CarnivorousPlants.TagHelpers*, CarnivorousPlants
