--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Index.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Index.cshtml
@@ -40,7 +40,12 @@
                 <td>@project.Created</td>
                 <td>@project.LastModified</td>
                 <td><img src="@project.ThumbnailUri"/></td>
-                <td></td>
+                <td>
+                    <a class="btn btn-outline-dark" asp-action="Delete" asp-route-projectId="@project.Id">
+                        <span class="oi oi-trash">
+                        </span>
+                    </a>
+                </td>
             </tr>
         }
     </tbody>
