--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Create.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model CarnivorousPlants.Models.ProjectViewModel.CreateViewModel
+﻿@using CarnivorousPlants.Models.ProjectViewModel
+@model CreateViewModel
 
 @{
     ViewData["Title"] = "Create project";
@@ -38,7 +39,7 @@
         </div>
     </div>
 
-    <table class="table table-condensed table-bordered" header header-content="Job position management">
+    <table class="table table-condensed table-bordered" header header-content="Domain">
         <thead>
             <tr>
                 <th>Select</th>
@@ -54,7 +55,6 @@
             @foreach (var domain in Model.Domains)
             {
                 <tr>
-                    @*<td>@jobPosition.Id</td>*@
                     <td>@Html.RadioButtonFor(m => m.DomainId, @domain.Id)</td>
                     <td>@domain.Id</td>
                     <td>@domain.Name</td>
@@ -66,7 +66,24 @@
         </tbody>
     </table>
 
+    <table class="table table-condensed table-bordered" header header-content="Classification">
+        <thead>
+            <tr>
+                <th>Select</th>
+                <th>Classification Type</th>
+            </tr>
+        </thead>
 
+        <tbody>
+            @foreach (var classificationType in ClassificationType.Types)
+            {
+                <tr>
+                    <td>@Html.RadioButtonFor(m => m.ClassificationType, classificationType)</td>
+                    <td>@classificationType</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
 
 
