--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Index.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Index.cshtml
@@ -16,10 +16,10 @@
     </a>
 </h2>
 
-<table class="table table-condensed table-bordered" header header-content="Job position management">
+<table class="table table-condensed table-bordered" header header-content="Projects">
     <thead>
         <tr>
-            <th>Id</th>
+            @*<th>Id</th>*@
             <th>Name</th>
             <th>Description</th>
             <th>Created</th>
@@ -34,8 +34,12 @@
         {
             <tr>
                 @*<td>@jobPosition.Id</td>*@
-                <td>@project.Id</td>
-                <td>@project.Name</td>
+                @*<td>@project.Id</td>*@
+                <td>
+                    <a  asp-action="Details" asp-route-projectId="@project.Id">
+                        @project.Name
+                    </a>
+                </td>
                 <td>@project.Description</td>
                 <td>@project.Created</td>
                 <td>@project.LastModified</td>
