Assign tag to image while uploading

--- a/CarnivorousPlants/CarnivorousPlants/Views/Image/Create.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Image/Create.cshtml
@@ -19,21 +19,33 @@
         </div>
     </div>
 
-    @*<div class="form-group" hidden>
-        <label asp-for="JobPositionName" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="JobPositionName" class="form-control" readonly="readonly" value="@Model.JobPositionName" />
-            <span asp-validation-for="JobPositionName" class="text-danger"></span>
-        </div>
-    </div>*@
-
-    @*<label asp-for="JobPositionName" class="col-md-2 control-label">@Html.DisplayFor(model => model.JobPositionName)</label>*@
-
-    <br /><br />
-
     <input type="file" name="image" />
+    <br />
+    <br />
+
+    <div>
+        <table class="table table-condensed table-bordered" header header-content="Classification">
+            <thead>
+                <tr>
+                    <th>Select</th>
+                    <th>Tag</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var tag in Model.Tags)
+                {
+                    <tr>
+                        <td>@Html.RadioButtonFor(m => m.TagId, tag.Id)</td>
+                        <td>@tag.Name</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
     <hr />
-    <input class="btn btn-primary" type="submit" value="Send"/>
+    <input class="btn btn-primary" type="submit" value="Send" />
     <a class="btn btn-sm btn-default" asp-controller="Project" asp-action="Details" asp-route-projectId="@Model.ProjectId">Back</a>
 </form>
 
