--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Details.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Details.cshtml
@@ -110,6 +110,7 @@
                 <th>Created</th>*@
                 <th>Image tagged</th>
                 <th>Tags</th>
+                <th>Option</th>
             </tr>
         </thead>
 
@@ -120,7 +121,6 @@
                     @*<td>@image.Id</td>
                     <td>@image.Height x @image.Width</td>
                     <td>@image.Created</td>*@
-                    
                     <td>
                         <img src="@image.ThumbnailUri" />
                     </td>
@@ -130,6 +130,13 @@
                             @tag.TagName@:
                         }
                     </td>
+                    <th>
+                        <a class="btn btn-outline-dark" asp-controller="Image" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-imageId="@image.Id" onclick="return confirm('Do you really want to delete this image?');">
+                            <span class="oi oi-trash">
+                            </span>
+                        </a>
+                    </th>
+
                     @*<td>
                         <a class="btn btn-outline-dark" asp-controller="Tag" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-tagId="@image.Id" onclick="return confirm('Do you really want to delete this tag?');">
                             <span class="oi oi-trash">
@@ -148,6 +155,8 @@
             <tr>
                 <th>Image untagged</th>
                 <th>Tags</th>
+                <th>Option</th>
+
             </tr>
         </thead>
 
@@ -159,6 +168,12 @@
                         <img src="@image.ThumbnailUri" />
                     </td>
                     <th></th>
+                    <th>
+                        <a class="btn btn-outline-dark" asp-controller="Image" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-imageId="@image.Id" onclick="return confirm('Do you really want to delete this image?');">
+                            <span class="oi oi-trash">
+                            </span>
+                        </a>
+                    </th>
 
                     @*<td>
                         @foreach (var tag in @image.Tags)
