--- a/CarnivorousPlants/CarnivorousPlants/Views/Project/Details.cshtml
+++ b/CarnivorousPlants/CarnivorousPlants/Views/Project/Details.cshtml
@@ -52,6 +52,9 @@
     </dl>
 </div>
 
+<a class="btn btn-success" asp-controller="Project" asp-action="Train" asp-route-projectId="@Model.Project.Id">Train</a>
+<br />
+<br />
 
 <h2>
     Tags
@@ -106,8 +109,8 @@
         <thead style="background-color:lightgrey">
             <tr>
                 @*<th>Id</th>
-                <th>Height x Width</th>
-                <th>Created</th>*@
+                    <th>Height x Width</th>
+                    <th>Created</th>*@
                 <th>Tagged</th>
                 <th>Tags</th>
                 <th>Option</th>
@@ -119,8 +122,8 @@
             {
                 <tr>
                     @*<td>@image.Id</td>
-                    <td>@image.Height x @image.Width</td>
-                    <td>@image.Created</td>*@
+                        <td>@image.Height x @image.Width</td>
+                        <td>@image.Created</td>*@
                     <td>
                         <img src="@image.ThumbnailUri" />
                     </td>
@@ -143,11 +146,11 @@
                     </th>
 
                     @*<td>
-                        <a class="btn btn-outline-dark" asp-controller="Tag" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-tagId="@image.Id" onclick="return confirm('Do you really want to delete this tag?');">
-                            <span class="oi oi-trash">
-                            </span>
-                        </a>
-                    </td>*@
+                            <a class="btn btn-outline-dark" asp-controller="Tag" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-tagId="@image.Id" onclick="return confirm('Do you really want to delete this tag?');">
+                                <span class="oi oi-trash">
+                                </span>
+                            </a>
+                        </td>*@
                 </tr>
             }
         </tbody>
@@ -183,11 +186,11 @@
                     </th>
 
                     @*<td>
-                        @foreach (var tag in @image.Tags)
-                        {
-                            @tag.TagName@:
-                        }
-                    </td>*@
+                            @foreach (var tag in @image.Tags)
+                            {
+                                @tag.TagName@:
+                            }
+                        </td>*@
                 </tr>
             }
         </tbody>
@@ -195,39 +198,39 @@
 </div>
 
 @*<div>
-    <table class="table table-condensed table-bordered" header header-content="Untagges images">
-        <thead>
-            <tr>
-                <th>Image untagged</th>
-                <th>Tags</th>
-                <th>Option</th>
-
-            </tr>
-        </thead>
-
-        <tbody>
-            @foreach (var image in Model.ImagesUntagged)
-            {
+        <table class="table table-condensed table-bordered" header header-content="Untagges images">
+            <thead>
                 <tr>
-                    <td>
-                        <img src="@image.ThumbnailUri" />
-                    </td>
-                    <th>
-                        <a class="btn btn-outline-dark" asp-controller="Image" asp-action="ChangeImageTag" asp-route-projectId="@Model.Project.Id" asp-route-imageId="@image.Id">
-                            <span class="oi oi-pencil">
-                            </span>
-                        </a>
-
-                    </th>
-                    <th>
-                        <a class="btn btn-outline-dark" asp-controller="Image" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-imageId="@image.Id" onclick="return confirm('Do you really want to delete this image?');">
-                            <span class="oi oi-trash">
-                            </span>
-                        </a>
-                    </th>
+                    <th>Image untagged</th>
+                    <th>Tags</th>
+                    <th>Option</th>
 
                 </tr>
-            }
-        </tbody>
-    </table>
-</div>*@
+            </thead>
+
+            <tbody>
+                @foreach (var image in Model.ImagesUntagged)
+                {
+                    <tr>
+                        <td>
+                            <img src="@image.ThumbnailUri" />
+                        </td>
+                        <th>
+                            <a class="btn btn-outline-dark" asp-controller="Image" asp-action="ChangeImageTag" asp-route-projectId="@Model.Project.Id" asp-route-imageId="@image.Id">
+                                <span class="oi oi-pencil">
+                                </span>
+                            </a>
+
+                        </th>
+                        <th>
+                            <a class="btn btn-outline-dark" asp-controller="Image" asp-action="Delete" asp-route-projectId="@Model.Project.Id" asp-route-imageId="@image.Id" onclick="return confirm('Do you really want to delete this image?');">
+                                <span class="oi oi-trash">
+                                </span>
+                            </a>
+                        </th>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>*@
